Rss feed updated

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" id="dslc-plugins-css-css" href="assets/css/font-awesome.css" type="text/css" media="all">
     <link rel="stylesheet" id="dslc-frontend-css-css" href="assets/css/frontend.min.css" type="text/css" media="all">
     <link rel="stylesheet" id="west-style-css" href="assets/css/style.css" type="text/css" media="all">
+    <link rel="stylesheet" id="medium-css" href="assets/css/medium.css" type="text/css" media="all">
     <style id="west-style-inline-css" type="text/css">
         .site-header {
             position: fixed;
@@ -5693,14 +5694,13 @@
 				<div id="dslc-module-18" class="dslc-module-front dslc-module-DSLC_Button dslc-in-viewport-check dslc-in-viewport-anim-none  dslc-col dslc-12-col dslc-last-col  dslc-module-handle-like-regular  dslc-in-viewport" data-module-id="18" data-module="DSLC_Button" data-dslc-module-size="12" data-dslc-anim="none" data-dslc-anim-delay="0" data-dslc-anim-duration="650" data-dslc-anim-easing="ease" data-dslc-preset="none" style="animation: 0.65s ease 0s 1 normal none running forwards;">
 
 					<div id="retainable-rss-embed" 
-							data-rss="https://medium.com/feed/retainable,
-							https://medium.com/feed/devopsturkey"
+							data-rss="https://medium.com/feed/devopsturkey"
 							data-maxcols="3" 
 							data-layout="grid" 
 							data-poststyle="inline" 
 							data-readmore="Read the rest" 
 							data-buttonclass="btn btn-primary" 
-							data-offset="-100">
+							data-offset="-3">
 					</div><!-- .dslc-module -->
 				</div>
 			</div>
